postgresql/k8s/03.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg-app-svc
spec:
  ports:
  - name: pg-app
    port: 8080
    targetPort: 8080
  selector:
    app: pg-app
    app.kubernetes.io/name: pg-app
